[gd_scene load_steps=7 format=2]

[ext_resource path="res://Utilities/User_Check.tscn" type="PackedScene" id=1]
[ext_resource path="res://Utilities/Error_Indicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/Twitch_Connector.gd" type="Script" id=3]
[ext_resource path="res://Utilities/Error_Indicator.gd" type="Script" id=4]
[ext_resource path="res://Nodes/Topics_Menu.gd" type="Script" id=5]
[ext_resource path="res://Utilities/Scrollable_Popup.tscn" type="PackedScene" id=6]

[node name="Twitch_Connector" type="GraphNode"]
anchor_right = 0.171875
anchor_bottom = 0.14
rect_min_size = Vector2( 0, 80 )
custom_constants/separation = 4
title = "Twitch Connection "
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Ping_Timer" type="Timer" parent="."]
wait_time = 180.0

[node name="Token_Checker" type="Timer" parent="."]
wait_time = 10.0

[node name="Settings" type="Button" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 160.0
margin_bottom = 44.0
size_flags_vertical = 0
text = "Settings"

[node name="Scrollable_Popup" parent="Settings" instance=ExtResource( 6 )]
anchor_left = 0.00694444
anchor_top = 0.0280001
anchor_right = 1.00694
anchor_bottom = 1.35
margin_top = 18.44
margin_right = 8.0
margin_bottom = 120.0
rect_min_size = Vector2( 152, 106 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ScrollContainer" parent="Settings/Scrollable_Popup" index="0"]
anchor_left = 0.0263158
anchor_top = 0.0377358
anchor_right = 0.973684
anchor_bottom = 0.962264
margin_left = -0.0526333
margin_top = -0.830183
margin_right = 0.0526581
margin_bottom = 0.830208
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" parent="Settings/Scrollable_Popup/ScrollContainer" index="0"]
margin_right = 146.0
margin_bottom = 98.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/Scrollable_Popup/ScrollContainer/VBoxContainer" index="0"]
margin_right = 146.0
margin_bottom = 26.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User_Check" parent="Settings/Scrollable_Popup/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 120.0
margin_bottom = 26.0
rect_min_size = Vector2( 120, 0 )
error_indicator = NodePath("../Error_Indicator")

[node name="Error_Indicator" parent="Settings/Scrollable_Popup/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 120.0
margin_right = 146.0
hint_tooltip = "Inputted Username does not 
exist in Credentials.  

Please hit the Get Connection 
Button to add it to locally 
saved Credentials"

[node name="Get_Authentication" type="Button" parent="Settings/Scrollable_Popup/ScrollContainer/VBoxContainer" index="1"]
margin_top = 30.0
margin_right = 146.0
margin_bottom = 50.0
hint_tooltip = "Gets a Connection for a new Account.  Node will not work as a connection if not done."
text = "Get Authentication"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Test_Authentication" type="Button" parent="Settings/Scrollable_Popup/ScrollContainer/VBoxContainer" index="2"]
margin_top = 54.0
margin_right = 146.0
margin_bottom = 74.0
text = "Test Authentication"
script = ExtResource( 4 )
self_viable = true

[node name="Topics_Selection" type="MenuButton" parent="Settings/Scrollable_Popup/ScrollContainer/VBoxContainer" index="3"]
margin_top = 78.0
margin_right = 146.0
margin_bottom = 98.0
text = "Set Topics"
flat = false
items = [ "Read Redemptions", null, 1, false, false, 0, 0, null, "", false, "Read Bits", null, 1, false, false, 1, 0, null, "", false, "Read Bits Badges", null, 1, false, false, 2, 0, null, "", false, "Read Subscriptions", null, 1, false, false, 3, 0, null, "", false ]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Ping_Timer" to="." method="send_var" binds= [ true, true, true ]]
[connection signal="timeout" from="Token_Checker" to="." method="bad_token_check"]
[connection signal="pressed" from="Settings" to="Settings/Scrollable_Popup" method="open"]
[connection signal="pressed" from="Settings/Scrollable_Popup/ScrollContainer/VBoxContainer/Get_Authentication" to="." method="get_authentication"]
[connection signal="pressed" from="Settings/Scrollable_Popup/ScrollContainer/VBoxContainer/Test_Authentication" to="." method="test_authentication"]
[connection signal="about_to_show" from="Settings/Scrollable_Popup/ScrollContainer/VBoxContainer/Topics_Selection" to="Settings/Scrollable_Popup/ScrollContainer/VBoxContainer/Topics_Selection" method="size_popup"]

[editable path="Settings/Scrollable_Popup"]
